<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.sf.art</groupId>
	<artifactId>art-parent</artifactId>
	<version>5.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>art-parent</name>
	<url>http://art.sourceforge.net</url>
	<description>Parent project for ART. ART is A Reporting Tool.</description>

	<modules>
		<module>art-mail</module>
		<module>art-dbcp</module>
		<module>cewolf-art</module>
		<module>saiku-service-art</module>
		<module>wcf-art</module>
		<module>mondrian-art</module>
		<module>jpivot-art</module>
		<module>reportengine-art</module>
		<module>calcite-csv-art</module>
		<module>calcite-file-art</module>
		<module>art</module>
	</modules>

	<scm>
		<connection>scm:hg:http://hg.code.sf.net/p/art/code</connection>
		<developerConnection>scm:hg:https://hg.code.sf.net/p/art/code</developerConnection>
		<url>http://hg.code.sf.net/p/art/code</url>
	</scm>

	<issueManagement>
		<system>SourceForge</system>
		<url>http://sourceforge.net/p/art/tickets/</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jdk.version>1.8</jdk.version>
		<slf4j.version>1.7.25</slf4j.version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<debug>true</debug>
						<!--						<showWarnings>true</showWarnings>
						<showDeprecation>true</showDeprecation>-->
						<compilerArgs>
							<arg>-Xlint</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<skipTests>true</skipTests>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>3.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>